# zx-calc

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO
examples/: entanglement-detection.rs  teleportation.rs
examples-old/: spider-fusion.rs  teleportation.rs
lib/: circuit.rs  complex.rs  graph.rs  indexmap.rs  ketbra.rs  lib.rs  phase.rs  vizdefs.rs
lib/circuit/: _circuit.rs  _graph.rs  graph.rs  mod.rs
lib/graph/: circuit.rs  diagram.rs  mod.rs  node.rs  spider.rs
lib/graph/clifft/: complex.rs  ctnode.rs  ctwire.rs  diagram.rs  mod.rs  tnode.rs  tphase.rs
lib/graph/rules/: bialgebra.rs  color_flip.rs  color_flip_all.rs  fuse.rs  fuse_all.rs  fuse_multi.rs  h2_hopf.rs  h_absorb.rs  h_absorb_all.rs  h_avg.rs  h_bialgebra.rs  h_euler.rs  h_euler_color_flip.rs  h_explode.rs  h_explode_all.rs  h_fuse.rs  h_hopf.rs  h_intro.rs  h_loop.rs  h_loop_all.rs  h_move.rs  h_multi_state.rs  h_multi_state_all.rs  h_self_loop.rs  h_self_loop_all.rs  h_state.rs  h_state_all.rs  h_state_copy.rs  h_state_copy_all.rs  h_state_mul.rs  h_state_mul_all.rs  hopf.rs  i_state.rs  i_state_all.rs  identity.rs  identity_all.rs  mod.rs  phase_neg.rs  phase_neg_all.rs  pi_commute.rs  (+6 more)
lib/graph/zh/: mod.rs  zhnode.rs
lib/graph/zx/: mod.rs  zxnode.rs  zxwire.rs
lib/graph2/: circuit.rs  diagram.rs  mod.rs  node.rs
lib/graph2/clifft/: complex.rs  ctnode.rs  ctwire.rs  mod.rs  tphase.rs
lib/graph2/rules/: bialgebra.rs  bit_bialgebra.rs  color_flip.rs  color_flip_all.rs  fuse.rs  fuse_all.rs  fuse_multi.rs  h2_hopf.rs  h_absorb.rs  h_absorb_all.rs  h_avg.rs  h_bialgebra.rs  h_euler.rs  h_euler_color_flip.rs  h_explode.rs  h_explode_all.rs  h_fuse.rs  h_hopf.rs  h_intro.rs  h_loop.rs  h_loop_all.rs  h_move.rs  h_multi_state.rs  h_multi_state_all.rs  h_self_loop.rs  h_self_loop_all.rs  h_state.rs  h_state_all.rs  h_state_copy.rs  h_state_copy_all.rs  h_state_mul.rs  h_state_mul_all.rs  hopf.rs  i_state.rs  i_state_all.rs  identity.rs  identity_all.rs  istate.rs  mod.rs  phase_neg.rs  (+9 more)
lib/graph2/zh/: mod.rs  zhnode.rs
lib/graph2/zx/: mod.rs  zxnode.rs  zxwire.rs
lib/ketbra2/: circuit.rs  diagram.rs  diagram2.rs  element.rs  element2.rs  ketbra.rs  mod.rs  state.rs
lib/sliced/: diagram.rs  element.rs  mod.rs
lib/sliced/dense/: mod.rs  tensor.rs
lib/sliced/sparse/: ketbra.rs  mod.rs
lib/tensor/: circuit.rs  diagram.rs  element.rs  mod.rs  tensor.rs
lib/tensor/dense/: mod.rs  tensor.rs
lib/tensor/sparse/: ketbra.rs  mod.rs
