[package]
name = "zx-calc"
version = "0.1.0"
authors = [ "Will Huie <wcwhuie@gmail.com>",]
edition = "2021"

[dependencies]
# indexmap = "*"
itertools = "0.12.1"
# rand = "*"
num-complex = "0.4.5"
ndarray = "0.15.6"
# ndarray-slice = "*"
# ndarray-histogram = "*"
# ndarray-rand = "*"
# ndarray-npy = "*"
tabbycat = "0.1.3"
thiserror = "1.0.57"
anyhow = "1.0.80"

[lib]
path = "lib/lib.rs"
name = "zx_calc"

[[bin]]
path = "src/main.rs"
name = "main"

# [dependencies.ndarray-linalg]
# version = "*"
# features = [ "openblas-system",]

[profile.release]
lto = true
panic = "abort"
