[package]
name = "zx-calc"
version = "0.1.0"
description = "Implementations of the ZX(H)-calculus"
readme = "README.md"
# license = ""
authors = [ "Will Huie <wcwhuie@gmail.com>",]
edition = "2021"
homepage = "https://gitlab.com/wchooie/zx-calc"
repository = "https://gitlab.com/wchooie/zx-calc.git"
# documentation = ""
keywords = ["zx", "zx-calculus", "quantum", "quantum computing"]
# categories = []

[dependencies]
# indexmap = "*"
itertools = "0.12.1"
# rand = "*"
num-complex = "0.4.5"
num-rational = "0.4.1"
ndarray = "0.15.6"
# ndarray-slice = "*"
# ndarray-histogram = "*"
# ndarray-rand = "*"
# ndarray-npy = "*"
tabbycat = "0.1.3"
thiserror = "1.0.57"

[lib]
path = "lib/lib.rs"
name = "zx_calc"

[dev-dependencies]
anyhow = "1.0.80"

# [dependencies.ndarray-linalg]
# version = "*"
# features = [ "openblas-system",]

[profile.release]
lto = true
panic = "abort"
